--- a/HTML/PSD to HTML/css/home.css
+++ b/HTML/PSD to HTML/css/home.css
@@ -8,6 +8,28 @@
     display: block !important;
 }
 
+.orange-btn {
+    color: #F88634 !important;
+}
+
+
+
+.drag-img {
+    height: 4rem;
+    width: 4rem;
+}
+
+
+.cancle-image {
+
+    height: 1rem;
+    width: 1rem;
+    top: 0px;
+    right: 1.9rem;
+    background: linear-gradient(rgba(0, 0, 0, 1), rgba(0, 0, 0, 1));
+}
+
+
 /* share story end */
 
 img {
