--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/_Index.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/_Index.cshtml
@@ -3,8 +3,11 @@
     var UserName = Context.Session.GetString("firstName");
     var userId = Context.Session.GetString("userId");
     var missionCount = ViewBag.missionCnt;
+    
+
 }
 <!-- grid and list view  -->
+<input type = "hidden" value="@userId" id="userId"/>
 <section class="mt-3 container p-0" id="mainContent">
     <!-- grid view  -->
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 grid-view">
@@ -12,7 +15,7 @@
         @foreach (var missions in Model.MissionList)
         {
             <div class="col grid-mission">
-
+                
                 <div class="card">
                     <img src="@missions.ThumbnailURL"
                      class="card-img-top position-relative default-img" alt="...">
@@ -30,9 +33,25 @@
                         <img class="" src="~/images/pin1.png" alt="#">
                         <span class="city-span">@missions.City.Name</span>
                     </div>
-                    <a href="#" class="position-absolute favourate rounded-pill p-1">
-                        <img class="" src="~/images/heart.png" alt="#">
-                    </a>
+                    @if (userId != null)
+                    {
+                        @if (missions.FavouriteMissionsList.Any(fm => fm.UserId == long.Parse(userId)))
+                        {
+                            <a class="position-absolute favourate rounded-pill p-1"  onclick="addRemoveFavourate(@missions.MissionId)">
+                            <input type="hidden" id="isFavourate" value="1"/>
+                                <img class="" src="~/images/fill-heart.png" alt="#">
+                            </a>
+                        }
+                        else
+                        {
+                            <input type="hidden" id="isFavourate" value="0"/>
+                            <a class="position-absolute favourate rounded-pill p-1" onclick="addRemoveFavourate(@missions.MissionId)">
+                                <img class="" src="~/images/heart1.png" alt="#">
+                            </a>
+
+                        }
+                    }
+
                     <a href="#" class="position-absolute user-div rounded-pill p-2">
                         <img class="" src="~/images/user.png" alt="#">
                     </a>
@@ -234,3 +253,4 @@
 
     </div>
 </section>
+
