--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/MissionDetail/Index.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/MissionDetail/Index.cshtml
@@ -2,11 +2,9 @@
 @{
     var UserName = Context.Session.GetString("firstName");
     var userId = Context.Session.GetString("userId");
-    Layout = "~/Views/Shared/_Layout.cshtml";
-    //var ratingsCount = ViewBag.ratingsByVolunteersCnt;
     var isFavourate = 0;
 
-    if(userId != "" && userId != null)
+    if (userId != "" && userId != null)
     {
         if (Model.FavouriteMissionsList.Any(fm => fm.UserId == long.Parse(userId)))
         {
@@ -21,10 +19,10 @@
         <button class="header-toggle d-md-none border-0">
             <img class="h-50" src="~/images/list.png" alt="#">
         </button>
-        <a asp-action="PlatformLandingPage" asp-controller ="Home">
-        <img class="logo h-50" src="~/images/logo.png" alt="#">
+        <a asp-action="PlatformLandingPage" asp-controller="Home">
+            <img class="logo h-50" src="~/images/logo.png" alt="#">
         </a>
-        <a href="#" class="text-decoration-none mx-5 d-none d-md-inline d-lg-inline">Stories</a>
+        <a asp-action="StoryListing" asp-controller="Story" class="text-decoration-none mx-5 d-none d-md-inline d-lg-inline">Stories</a>
         <button class="dropdown-toggle policy-btn d-none d-md-inline d-lg-inline" data-bs-toggle="dropdown"
                 aria-expanded="false" type="button" id="dropdownMenuButton1">
             Policy
@@ -62,10 +60,10 @@
         @if (UserName == null)
         {
             <div class="d-inline">
-                <a class="btn btn-outline-danger rounded" asp-action ="Login" asp-controller="Home" asp-area = "Users">Login</a>
+                <a class="btn btn-outline-danger rounded" asp-action="Login" asp-controller="Home" asp-area="Users">Login</a>
             </div>
         }
-        
+
     </div>
 </nav>
 
@@ -120,37 +118,38 @@
 
         <div>
             <div class="title-heading">@Model.Title</div>
-            <p class="descr mt-2">@Model.ShortDesc
+            <p class="descr mt-2">
+                @Model.ShortDesc
             </p>
 
             @if (Model.MissionType == false)
             {
                 <div>
                     <div class="border start-end-date rounded-pill mx-auto p-2 -translate-middle-y bg-white">
-                    @Model.GoalMissions.GoalObjectiveText
-                </div>
-                <div class="d-flex justify-content-around  border-top pt-4 pb-2 border-bottom">
-                    <div class="d-flex align-items-center">
-                        <img class='h-50' src="~/images/Seats-left.png" alt="#">
-                        <div class="ms-2">
-                            <p class="m-0 p-0 fw-bold">@Model.SeatsLeft</p>
-                            <span class="m-0 p-0 seats-left">Seats left</span>
-                        </div>
+                        @Model.GoalMissions.GoalObjectiveText
                     </div>
-                    <div class="d-flex align-items-center">
-                        <img class="h-50" src="~/images/achieved.png" alt="#">
-                        <div class="ms-2">
-                            <div class="progress">
-                                <div class="progress-bar w-75" role="progressbar" aria-valuenow="50"
-                                     aria-valuemin="0" aria-valuemax="100">
-                                </div>
+                    <div class="d-flex justify-content-around  border-top pt-4 pb-2 border-bottom">
+                        <div class="d-flex align-items-center">
+                            <img class='h-50' src="~/images/Seats-left.png" alt="#">
+                            <div class="ms-2">
+                                <p class="m-0 p-0 fw-bold">@Model.SeatsLeft</p>
+                                <span class="m-0 p-0 seats-left">Seats left</span>
                             </div>
+                        </div>
+                        <div class="d-flex align-items-center">
+                            <img class="h-50" src="~/images/achieved.png" alt="#">
+                            <div class="ms-2">
+                                <div class="progress">
+                                    <div class="progress-bar w-75" role="progressbar" aria-valuenow="50"
+                                     aria-valuemin="0" aria-valuemax="100">
+                                    </div>
+                                </div>
 
-                            <span class="m-0 p-0 deadline">8000 achieved</span>
+                                <span class="m-0 p-0 deadline">8000 achieved</span>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
             }
             else
             {
@@ -178,14 +177,14 @@
                     </div>
                 </div>
             }
-            <input type="hidden" value="@Model.MissionId" id ="missionId" />
-            
+            <input type="hidden" value="@Model.MissionId" id="missionId" />
+
             <input type="hidden" value="@userId" id="userId" />
 
-            
+
             @if (userId != null)
             {
-                    <div class="d-flex gap-2 m-3 justify-content-md-center">
+                <div class="d-flex gap-2 m-3 justify-content-md-center">
                     @if (isFavourate == 1)
                     {
                         <input type="hidden" value="1" id="isFavourate" />
@@ -203,46 +202,45 @@
                             <span class="font-size fav-span">Add to Favourite</span>
 
                         </button>
-                        
+
                     }
-                    <button class="border rounded-pill bg-white py-1" id="recommendedBtn"  data-bs-target="#recommendedModal">
-                            <img src="~/images/add1.png" alt="">
-                            <span class="font-size">Recommend to a Co-Worker</span>
+                    <button class="border rounded-pill bg-white py-1" id="recommendedBtn" data-bs-target="#recommendedModal">
+                        <img src="~/images/add1.png" alt="">
+                        <span class="font-size">Recommend to a Co-Worker</span>
 
-                        </button>
+                    </button>
 
-                        <div id="recommendedPartial">
-
-                        </div>
-
-
-
-
+                    <div id="recommendedPartial">
                     </div>
-                                <!-- rating.js file -->
-                         
-                    
-                     
-                    <div id="rating" class="d-flex justify-content-center align-items-center position-relative z-1 mb-1">
-
-                       <input id="star-input-id"  type="text" class="rating text-center d-none" data-size="sm" />
-                    </div>
-                    
-               
 
 
-                        
-                    
-                }
-            
+
+
+                </div>
+                <!-- rating.js file -->
+
+
+
+                <div id="rating" class="d-flex justify-content-center align-items-center position-relative z-1 mb-1">
+
+                    <input id="star-input-id" type="text" class="rating text-center d-none" data-size="sm" />
+                </div>
+
+
+
+
+
+
+            }
+
 
 
             @*<div class="d-flex justify-content-center m-3">
-                <img src="~/images/star-empty.png" alt="">
-                <img src="~/images/star-empty.png" alt="">
-                <img src="~/images/star-empty.png" alt="">
-                <img src="~/images/star-empty.png" alt="">
-                <img src="~/images/star-empty.png" alt="">
+            <img src="~/images/star-empty.png" alt="">
+            <img src="~/images/star-empty.png" alt="">
+            <img src="~/images/star-empty.png" alt="">
+            <img src="~/images/star-empty.png" alt="">
+            <img src="~/images/star-empty.png" alt="">
             </div>*@
             <div class="row gap-3 ">
                 <div class="border col d-flex flex-column justify-content-between p-0">
@@ -364,26 +362,53 @@
 
                     <div class="d-flex gap-3 flex-wrap">
                         @foreach (var doc in Model.MissionDocuments)
-                         {
-                            <a href="@doc.DocumentLink" class="text-decoration-none text-black">
-                            <div class="border rounded-pill d-flex gap-2 px-4 py-2 align-items-center">
-                           
-                            @doc.DocumentName@doc.DocumentType
-                                
-                            </div>
-                        </a>
-                            
-                            
-                         }
-                         @*
+                        {
+                            if (doc.DocumentType.Equals(".xlsx"))
+                            {
+                                <a href="@doc.DocumentLink" class="text-decoration-none text-black">
+
+                                    <div class="border rounded-pill d-flex gap-2 px-4 py-2 align-items-center">
+                                        <img src="~/images/xlsx.png" />
+
+                                        @doc.DocumentName@doc.DocumentType
+
+                                    </div>
+                                </a>
+                            }
+                        else if(doc.DocumentType.Equals(".docx"))
+                        {
+                        <a href="@doc.DocumentLink" class="text-decoration-none text-black">
                         <div class="border rounded-pill d-flex gap-2 px-4 py-2 align-items-center">
-                            <img src="~/images/doc.png" alt="">
-                            at_vero_eos_accusamus.doc
+                        <img src="~/images/doc.png" />
+                        @doc.DocumentName@doc.DocumentType
+
+                        </div>
+                        </a>
+
+                        }
+                            else
+                            {
+                                <a href="@doc.DocumentLink" class="text-decoration-none text-black">
+                                    <div class="border rounded-pill d-flex gap-2 px-4 py-2 align-items-center">
+                                        <img src="~/images/pdf.png" />
+                                        @doc.DocumentName@doc.DocumentType
+
+                                    </div>
+                                </a>
+
+                            }
+
+
+                        }
+                        @*
+                        <div class="border rounded-pill d-flex gap-2 px-4 py-2 align-items-center">
+                        <img src="~/images/doc.png" alt="">
+                        at_vero_eos_accusamus.doc
                         </div>
 
                         <div class="border rounded-pill d-flex gap-2 px-4 py-2 align-items-center">
-                            <img src="~/images/xlsx.png" alt="">
-                            important_doc.xls
+                        <img src="~/images/xlsx.png" alt="">
+                        important_doc.xls
                         </div>*@
 
                     </div>
@@ -401,17 +426,17 @@
             {
                 <div class="d-none comment-div mt-3">
                     <textarea name="" id="commentMsg" cols=" 10" rows="4"
-                          class="form-control text-secondary"   placeholder="Enter your comments..." onkeyup="enableDisableBtn()"></textarea>
+                          class="form-control text-secondary" placeholder="Enter your comments..." onkeyup="enableDisableBtn()"></textarea>
 
-                <div class="d-flex">
+                    <div class="d-flex">
                         <button class="btn apply-btn mt-3 mb-3 px-4" id="commentBtn" disabled>
-                        Post Comment <img src="~/images/right-arrow.png" alt="#">
-                    </button>
-                </div>
-                <div class="bg-light container p-3" id="partialComment">
+                            Post Comment <img src="~/images/right-arrow.png" alt="#">
+                        </button>
+                    </div>
+                    <div class="bg-light container p-3" id="partialComment">
                     </div>
 
-            </div>
+                </div>
             }
 
         </div>
@@ -424,14 +449,14 @@
                 <div class="d-flex  flex-wrap gap-lg-1 justify-content-between mt-4 border-bottom">
                     <p>Skills</p>
                     <ul class="d-flex skills-ul flex-wrap ">
-                        @foreach(var skills in Model.MissionSkillsList)
+                        @foreach (var skills in Model.MissionSkillsList)
                         {
-                        <li class="ms-1">@skills.Skill.SkillName</li>
+                            <li class="ms-1">@skills.Skill.SkillName</li>
 
-                        
+
                         }
-                        
-                        
+
+
                     </ul>
                 </div>
                 <div class="d-flex border-bottom justify-content-between gap-lg-5 mt-2">
@@ -440,20 +465,21 @@
                 </div>
 
                 <div class="d-flex gap-lg-4 mt-2 gap-5 justify-content-md-between" id="ratingPartial">
-                    
                 </div>
             </div>
-            
+
             <!-- right second div  -->
             <div class="border p-3 ps-0  pe-0 pb-0 ">
                 <h4 class="ps-3  py-3  border-bottom active-tab d-inline">Recent Volunteers</h4>
                 <div class="d-flex justify-content-around p-sm-1 p-lg-5 flex-wrap volunteer-div mt-4">
-                    @{int i = 0;}
-                    @foreach(var user in Model.MissionApplications)
+                    @{
+                        int i = 0;
+                    }
+                    @foreach (var user in Model.MissionApplications)
                     {
-                        if(user.ApprovalStatus == 1)
+                        if (user.ApprovalStatus == 1)
                         {
-                    
+
                             <div class="text-center" data-recent="@i">
                                 <img class="rounded-pill" src="~/images/volunteer1.png" alt="">
                                 <p class="volunteer-name">@user.User.FirstName</p>
@@ -463,7 +489,7 @@
                             }
                         }
                     }
-                    
+
 
 
                 </div>
@@ -484,11 +510,10 @@
     </div>
     <!-- third section  -->
     <div class="mt-5 border-top p-3" id="realtedMission">
-
     </div>
 </section>
 
 @section Scripts{
     <script src="~/js/missionDetail.js"></script>
-    
+
 }
