--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/_Index.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/_Index.cshtml
@@ -50,11 +50,11 @@
                             </a>
 
                         }
-                    }
-
                     <a href="#" class="position-absolute user-div rounded-pill p-2">
                         <img class="" src="~/images/user.png" alt="#">
                     </a>
+                    }
+
                     <span class="theme-name align-text-top py-2 px-4 mx-auto position-relative translate-middle-y">@missions.Theme.Title</span>
                     <div class="card-body p-0">
                         <h5 class="card-title mission-title px-3">
@@ -178,18 +178,33 @@
             <div class="card">
                 <div class="row">
                     <div class="col-4">
-                        <img src="~/images/Grow-Trees-On-the-path-to-environment-sustainability-3.png"
+                        <img src="@missions.ThumbnailURL"
                          class="card-img-top position-relative" alt="...">
                         <div class="position-absolute country-list-div rounded-pill p-2">
                             <img class="" src="~/images/pin1.png" alt="#">
                             <span class="city-span">@missions.City.Name</span>
                         </div>
-                        <a href="#" class="position-absolute favourate-list rounded-pill p-1">
-                            <img class="" src="~/images/heart.png" alt="#">
-                        </a>
-                        <a href="#" class="position-absolute user-list-div rounded-pill p-2">
-                            <img class="" src="~/images/user.png" alt="#">
-                        </a>
+
+                         @if (userId != null)
+                        {
+                            @if (missions.FavouriteMissionsList.Any(fm => fm.UserId == long.Parse(userId)))
+                            {
+                                <a href="#" class="position-absolute favourate-list rounded-pill p-1">
+                                    <img class="" src="~/images/fill-heart.png" alt="#">
+                                </a>
+                            }
+                            else
+                            {
+
+                                <a href="#" class="position-absolute favourate-list rounded-pill p-1">
+                                    <img class="" src="~/images/heart.png" alt="#">
+                                </a>
+                            }
+                            <a href="#" class="position-absolute user-list-div rounded-pill p-2">
+                                <img class="" src="~/images/user.png" alt="#">
+                            </a>
+                        }
+                        
                         <div class="theme-name align-text-top py-2 px-4 mx-auto translate-middle-y">
                             @missions.Theme.Title
 
@@ -214,35 +229,85 @@
                                         <img src="~/images/star.png" alt="">
                                     </div>
                                 </div>
-                                <div class="d-flex ps-3">
-                                    <a href="#" class="btn apply-btn mt-3 mb-3">
-                                        Apply <img src="~/images/right-arrow.png" alt="#">
-                                    </a>
-                                </div>
+                                @if (userId != null)
+                                {
+                                    <div class="d-flex ps-3">
+                                        @if (UserName != null && missions.MissionApplications.Any(ma => ma.UserId == long.Parse(userId) && ma.ApprovalStatus == 1))
+                                        {
+                                            <a class="btn apply-btn mt-3 mb-3" asp-action="Index" asp-route-id="@missions.MissionId" asp-controller="MissionDetail">
+                                                View Details <img src="~/images/right-arrow.png" alt="#">
+                                            </a>
+                                        }
+                                        else
+                                        {
+                                            <a class="btn apply-btn mt-3 mb-3" asp-action="Index" asp-route-id="@missions.MissionId" asp-controller="MissionDetail">
+                                               Apply <img src="~/images/right-arrow.png" alt="#">
+                                            </a>
+                                            
+                                        }
+                                    </div>
+                                }
                             </div>
+
+                            @if (missions.MissionType == true)
+                            {
+
+                                <div>
+                                    <div class="border start-end-date rounded-pill mx-auto p-2 -translate-middle-y bg-white">
+                                        From
+                                        @missions.StartDate?.ToString("d") until
+                                        @missions.EndDate?.ToString("d")
+                                    </div>
+                                    <div class="d-flex justify-content-around border-top pt-4 pb-2  px-4">
+                                        <div class="d-flex align-items-center">
+                                            <img class='h-50' src="~/images/Seats-left.png" alt="#">
+                                            <div class="ms-2">
+                                                <p class="m-0 p-0 fw-bold">@missions.SeatsLeft</p>
+                                                <span class="m-0 p-0 seats-left">Seats left</span>
+                                            </div>
+                                        </div>
+                                        <div class="d-flex align-items-center ms-4">
+                                            <img class="h-50" src="~/images/deadline.png" alt="#">
+                                            <div class="ms-2">
+                                                <p class="m-0 p-0 fw-bold">@missions.EndDate?.ToString("d")</p>
+                                                <span class="m-0 p-0 deadline"> Deadline</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            }
+                            else{
+
+
+                           
                             <div>
                                 <div class="border start-end-date rounded-pill mx-auto p-2 -translate-middle-y bg-white">
-                                    From
-                                    @missions.StartDate until
-                                    @missions.EndDate
+                                    @missions.GoalMissions.GoalObjectiveText
                                 </div>
-                                <div class="d-flex justify-content-around border-top pt-4 pb-2  px-4">
+                                <div class="d-flex justify-content-around  border-top pt-4 pb-2 border-bottom">
                                     <div class="d-flex align-items-center">
-                                        <img class='h-50' src="~/images/Seats-left.png" alt="#">
+                                        <img class='h-50' src="./images/Seats-left.png" alt="#">
                                         <div class="ms-2">
-                                            <p class="m-0 p-0 fw-bold">10</p>
+                                            <p class="m-0 p-0 fw-bold">@missions.SeatsLeft</p>
                                             <span class="m-0 p-0 seats-left">Seats left</span>
                                         </div>
                                     </div>
-                                    <div class="d-flex align-items-center ms-4">
-                                        <img class="h-50" src="~/images/deadline.png" alt="#">
+                                    <div class="d-flex align-items-center">
+                                        <img class="h-50" src="./images/deadline.png" alt="#">
                                         <div class="ms-2">
-                                            <p class="m-0 p-0 fw-bold">09/01/2019</p>
-                                            <span class="m-0 p-0 deadline"> Deadline</span>
+                                            <div class="progress">
+                                                <div class="progress-bar w-75" role="progressbar" aria-valuenow="50"
+                                                 aria-valuemin="0" aria-valuemax="100">
+                                                </div>
+                                            </div>
+
+                                            <span class="m-0 p-0">8000 achieved</span>
+
                                         </div>
                                     </div>
                                 </div>
                             </div>
+                            }
                         </div>
 
 
