--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Story/ShareStory.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Story/ShareStory.cshtml
@@ -2,101 +2,72 @@
 @{
     var missions = ViewBag.missions;
     var userId = Context.Session.GetString("userId");
+    var userName = Context.Session.GetString("userName");
 
 }
+<partial name="_Navbar1" />
 
-<!-- navbar  -->
-<nav class="d-flex justify-content-between container mt-3 first-div">
-    <div class="dropdown left-div">
-        <a asp-action="PlatformLanding" asp-controller="Home">
-        <img class="logo h-50" src="~/images/logo.png" alt="#">
-        </a>
-        <a asp-action="StoryListing" asp-controller="Story" class="text-decoration-none mx-5 d-none d-md-inline d-lg-inline">Stories</a>
-        <button class="dropdown-toggle policy-btn d-none d-md-inline d-lg-inline" data-bs-toggle="dropdown"
-                aria-expanded="false" type="button" id="dropdownMenuButton1">
-            Policy
-            <img class="m-1" src="~/images/drop-down.png" alt="#">
-        </button>
-        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-        </ul>
-
-    </div>
-    <div class="dropdown right-div mb-3">
-
-        <img class="rounded-circle user-img" src="~/images/user-img.png" alt="#">
-        <button class="dropdown-toggle policy-btn profile-btn d-none d-sm-inline" data-bs-toggle="dropdown"
-                aria-expanded="false" type="button" id="dropdownMenuButton1">
-            Evan Donohue
-            <img class="m-1" src="~/images/drop-down.png" alt="#">
-        </button>
-        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-        </ul>
-    </div>
-
-</nav>
 <section class="border-top">
-    <form method="post" action="ShareStory">
-
+    <form method="post" asp-action="AddStory" enctype="multipart/form-data" id="formSubmit">
+        <input type = "hidden" value="@userId" asp-for="UserId" />
     <div class="container mt-4">
         <h3 class="text-secondary">Share your story</h3>
 
         <div class="row mt-5">
             <div class="col">
-                <label>Select Your Mission</label>
-                <select id="" class="form-select mt-1">
-                    <option selected disabled>Select your mission</option>
-                    @foreach(var mission in missions)
+                <label for="missions">Select Your Mission</label>
+                <select id="missions" class="form-select mt-1" asp-for="MissionId" asp-items="@(new SelectList(ViewBag.missions,"MissionId","Title"))">
+                    <option selected disabled value="">Select your mission</option>
+                    @*@foreach(var mission in missions)
                     {
-                        <option value = "@mission.MissionId" > @mission.Title</option>   
-                    }
+                        <option value = "@mission.MissionId"> @mission.Title</option>   
+                    }*@
                     
                 </select>
+              <span asp-validation-for="MissionId" class="text-danger error-span"></span>
             </div>
 
             <div class="col">
-                <label>My Story Title</label>
-                <input type="text" asp-for="StoryTitle" class="form-control mt-1" placeholder="Enter story title" />
+                <label for = "storyTitle">My Story Title</label>
+                <input type="text" id="storyTitle" asp-for="StoryTitle" class="form-control mt-1" placeholder="Enter story title" />
                     <span asp-validation-for="StoryTitle" class="text-danger error-span"></span>
             </div>
         </div>
         <div class="mt-4">
-            <label class="mb-2">My Story</label>
-            <textarea id="tiny"></textarea>
-
+            <label class="mb-2" for="tiny">My Story</label>
+            <textarea id="tiny" asp-for="Description"></textarea>
+            <span asp-validation-for="Description" id="descSpan" class="text-danger error-span"></span>
         </div>
 
         <div class="my-4">
-            <label class="mb-2">Enter Video URL</label>
-            <input type="text" placeholder="Enter your url" class="form-control">
+            <label class="mb-2" for = "videoUrl">Enter Video URL</label>
+            <input type="text" id = "videoUrl" placeholder="Enter your url" class="form-control">
         </div>
+
         <label class="mb-2">Upload your Photos</label>
 
 
         <div class="d-flex justify-content-center drag-drop-div">
             <img src="~/images/drag-and-drop.png" class="p-5 drag-images" alt="Drag And Drop">
         </div>
+            <span id="dragImgSpan" class="text-danger error-span"></span>
 
         <div class="image-display-div mt-4 d-flex">
         </div>
-        <input type="file" id="drag-img" hidden accept=".png, .jpeg, .jpg" multiple>
+        <input type="file"  id="drag-img" name = "file" hidden accept=".png, .jpeg, .jpg" multiple>
+            
         <div class="d-flex justify-content-between">
             <div class="mt-4">
                 <a class="btn border-secondary rounded-pill px-4 py-2">Cancle</a>
             </div>
-
+            <input type="hidden" name="action" id="action"/>
             <div class="d-flex">
                 <div class="mt-4 me-2">
-                    <a class="btn border rounded-pill px-4 py-2 orange-btn"
-                       style="border-color: #F88634 !important">Save</a>
+                    <button type ="submit" value="draft" id ="draftSubmit" class="btn border rounded-pill px-4 py-2 orange-btn"
+                       style="border-color: #F88634 !important">Save</button>
                 </div>
                 <div class="mt-4">
-                    <button type ="submit" class="btn border rounded-pill px-4 py-2 orange-btn"
+                    <button type ="submit" id="submitBtn" value="share" class="btn border rounded-pill px-4 py-2 orange-btn"
                        style="border-color: #F88634 !important">Submit</button>
                 </div>
             </div>
