--- a/MVC/CI-Platform/CIPlatformWeb/Views/Shared/_Navbar.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Views/Shared/_Navbar.cshtml
@@ -32,7 +32,7 @@
         </button>
         @if (UserName != null)
         {
-            <img class="rounded-circle user-img" src="~/images/user1.png" alt="#">
+            <img class="rounded-circle user-img" src="~/images/user-img.png" alt="#">
             <button class="dropdown-toggle policy-btn profile-btn d-none d-sm-inline" data-bs-toggle="dropdown"
                 aria-expanded="false" type="button" id="dropdownMenuButton1">
                 <span>@UserName</span>
