--- a/MVC/CI-Platform/CIPlatformWeb/wwwroot/css/home.css
+++ b/MVC/CI-Platform/CIPlatformWeb/wwwroot/css/home.css
@@ -14,6 +14,7 @@
 
 
 
+
 .drag-img {
     height: 4rem;
     width: 4rem;
@@ -30,6 +31,11 @@
 
 
 /* share story end */
+
+#card-img-top{
+    height:13rem !important;
+}
+
 img {
     max-width: 100%;
 }
