--- a/MVC/CI-Platform/CIPlatformWeb/Views/Shared/_Navbar1.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Views/Shared/_Navbar1.cshtml
@@ -8,7 +8,7 @@
 <input type ="hidden" value="@userId" id ="userId" />
 <nav class="d-flex justify-content-between container mt-3 first-div">
     <div class="dropdown left-div">
-        <a asp-action="PlatformLanding" asp-controller="Home">
+        <a asp-action="PlatformLandingPage" asp-controller="Home">
             <img class="logo h-50" src="~/images/logo.png" alt="#">
         </a>
         <a asp-action="StoryListing" asp-controller="Story" class="text-decoration-none mx-5 d-none d-md-inline d-lg-inline">Stories</a>
