--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Story/ShareStory.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Story/ShareStory.cshtml
@@ -8,10 +8,20 @@
 <partial name="_Navbar1" />
 
 <section class="border-top">
+    
     <form method="post" asp-action="AddStory" enctype="multipart/form-data" id="formSubmit">
+        <input type="hidden" value="@Model.StoryId" name="storyID" />
+        @if (Model.Status == 2)
+        {
+            @foreach (var media in Model?.StoryMedia!)
+            {
+
+                <input type="hidden" name="preloaded" value="@media.MediaName@media.MediaType" id="storyMedia" data-name="@media.MediaName" data-type="@media.MediaType" data-path="@media.MadiaPath" />
+            }
+        }
         <input type = "hidden" value="@userId" asp-for="UserId" />
     <div class="container mt-4">
-        <h3 class="text-secondary">Share your story</h3>
+        <h3 class="text-secondary">Share your story</h3>  
 
         <div class="row mt-5">
             <div class="col">
@@ -29,13 +39,13 @@
 
             <div class="col">
                 <label for = "storyTitle">My Story Title</label>
-                <input type="text" id="storyTitle" asp-for="StoryTitle" class="form-control mt-1" placeholder="Enter story title" />
+                <input type="text" id="storyTitle" asp-for="StoryTitle" class="form-control mt-1" placeholder="Enter story title"/>
                     <span asp-validation-for="StoryTitle" class="text-danger error-span"></span>
             </div>
         </div>
         <div class="mt-4">
             <label class="mb-2" for="tiny">My Story</label>
-            <textarea id="tiny" asp-for="Description"></textarea>
+            <textarea id="tiny" asp-for="Description" ></textarea>
             <span asp-validation-for="Description" id="descSpan" class="text-danger error-span"></span>
         </div>
 
@@ -55,11 +65,20 @@
         <div class="image-display-div mt-4 d-flex">
         </div>
         <input type="file"  id="drag-img" name = "file" hidden accept=".png, .jpeg, .jpg" multiple>
-            
         <div class="d-flex justify-content-between">
-            <div class="mt-4">
-                <a class="btn border-secondary rounded-pill px-4 py-2">Cancle</a>
-            </div>
+                @if (Model.StoryId != null)
+                {
+                    <div class="mt-4">
+                        <a class="btn border-secondary rounded-pill px-4 py-2" asp-action="deleteStory" asp-controller="Story" asp-route-storyId ="@Model.StoryId">Cancle</a>
+                    </div>
+                }
+                else
+                {
+                     <div class="mt-4">
+                        <a class="btn border-secondary rounded-pill px-4 py-2" asp-action="StoryListing" asp-controller="Story">Cancle</a>
+                    </div>
+                    
+                }
             <input type="hidden" name="action" id="action"/>
             <div class="d-flex">
                 <div class="mt-4 me-2">
