--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Story/ShareStory.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Story/ShareStory.cshtml
@@ -50,8 +50,8 @@
         </div>
 
         <div class="my-4">
-            <label class="mb-2" for = "videoUrl">Enter Video URL</label>
-            <input type="text" id = "videoUrl" placeholder="Enter your url" class="form-control">
+            <label class="mb-2"  for = "videoUrl">Enter Video URL</label>
+            <input type="text" asp-for="VideoUrl" id = "videoUrl" placeholder="Enter your url" class="form-control">
         </div>
 
         <label class="mb-2">Upload your Photos</label>
