--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Story/StoryDetail.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Story/StoryDetail.cshtml
@@ -44,7 +44,7 @@
                         <span class="text-secondary mt-2">@Model.User.FirstName @Model.User.LastName</span>
                         <div class="border rounded-pill px-2 py-1">
                             <img src="~/images/eye.png" alt="">
-                            <span class="text-secondary font-size">12,000 Views</span>
+                            <span class="text-secondary font-size">@Model.StoryViews Views</span>
                         </div>
                     </div>
                 </div>
