--- a/MVC/CI-Platform/CIPlatformWeb/Views/Shared/_Footer.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Views/Shared/_Footer.cshtml
@@ -5,13 +5,20 @@
 }
 
 <footer>
-    <div class="container border-top p-3 d-flex justify-content-between mt-5 footer-div">
+    <div class="container border-top p-3 d-flex gap-3 mt-5 footer-div">
         <div>
-            <span class="fw-bold">Privacy Policy</span>
-            
+            <a href="" class="fw-bold text-decoration-none text-black">Privacy Policy</a>
+
         </div>
-        
+        <div>
+            <a href="" class="text-secondary text-decoration-none" data-bs-target="#contactUsModal"
+               data-bs-toggle="modal">Contact us</a>
+
+        </div>
+
 
     </div>
+
+
 
 </footer>
